
2025-08-24 Franz Holzinger  <franz@ttproducts.de>
    * since TYPO3 12: remove FormContentObject::buildActionLink legacy layer

2025-08-24 Franz Holzinger  <franz@ttproducts.de>
    * only TYPO3 13 support
    * move TypoScript into Sets

2025-08-12 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: AfterCacheableContentIsGenerated output

2025-07-15 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: The request object must be changable by the executed methods.

2024-12-30 Franz Holzinger  <franz@ttproducts.de>
    * workaround for 1666513645 RuntimeException: Setup array has not been initialized.

2024-12-20 Franz Holzinger  <franz@ttproducts.de>
    * fix #6: prefixLocalAnchorsWithScript parameter

2024-11-15 Franz Holzinger  <franz@ttproducts.de>
    * support TYPO3 13
    * Deprecation no. 79858: remove compensateFieldWidth
    * The form cannot be cached.

2024-11-10 Franz Holzinger  <franz@ttproducts.de>
	* delete not working hook class FrontendHooks tslib/class.tslib_fe.php configArrayPostProc, because the TypoScript is not passed by the parent object
	* initialize FEData in the Middleware

2023-12-30 Franz Holzinger  <franz@ttproducts.de>
	* use rector to improve the PHP code

2023-08-02 Franz Holzinger  <franz@ttproducts.de>
    * remove constants DIV2007_EXT, DIV2007_LANGUAGE_SUBPATH and TSLIB_FETCE_EXT

2023-03-02 Franz Holzinger  <franz@ttproducts.de>
    * Breaking no. #96287: use fetchAssociative instead of fetch

2023-02-10 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 11 and 12

2022-04-07 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 8.5 and PHP 8

2021-11-17 Franz Holzinger <franz@ttproducts.de>
    * bugfix: locationData must not be required
    * bugfix TYPO3 10: The Middleware must be executed after typo3/cms-frontend/prepare-tsfe-rendering .

2021-10-22 Franz Holzinger <franz@ttproducts.de>