@@ -1,6 +1,7 @@
 
 2025-08-24 Franz Holzinger  <franz@ttproducts.de>
     * since TYPO3 12: remove FormContentObject::buildActionLink legacy layer
+    * since TYPO3 12: remove FormContentObject::buildLinks legacy layer
 
 2025-08-24 Franz Holzinger  <franz@ttproducts.de>
     * only TYPO3 13 support
